@@ -286,14 +286,10 @@ abstract class ApiBase extends ContextSource {
 			if ( $this->isReadMode() ) {
 				$msg .= "\nThis module requires read rights";
 			}
-			if ( $this->isWriteMode() ) {
-				$msg .= "\nThis module requires write rights";
-			}
 			if ( $this->mustBePosted() ) {
 				$msg .= "\nThis module only accepts POST requests";
 			}
-			if ( $this->isReadMode() || $this->isWriteMode() ||
-					$this->mustBePosted() ) {
+			if ( $this->isReadMode() || $this->mustBePosted() ) {
 				$msg .= "\n";
 			}
 
@@ -1296,8 +1292,6 @@ abstract class ApiBase extends ContextSource {
 
 		// API-specific messages
 		'readrequired' => array( 'code' => 'readapidenied', 'info' => "You need read permission to use this module" ),
-		'writedisabled' => array( 'code' => 'noapiwrite', 'info' => "Editing of this wiki through the API is disabled. Make sure the \$wgEnableWriteAPI=true; statement is included in the wiki's LocalSettings.php file" ),
-		'writerequired' => array( 'code' => 'writeapidenied', 'info' => "You're not allowed to edit this wiki through the API" ),
 		'missingparam' => array( 'code' => 'no$1', 'info' => "The \$1 parameter must be set" ),
 		'invalidtitle' => array( 'code' => 'invalidtitle', 'info' => "Bad title \"\$1\"" ),
 		'nosuchpageid' => array( 'code' => 'nosuchpageid', 'info' => "There is no page with ID \$1" ),
@@ -1488,7 +1482,8 @@ abstract class ApiBase extends ContextSource {
 		return true;
 	}
 	/**
-	 * Indicates whether this module requires write mode
+	 * Indicates whether this module writes to the database; whether to
+	 * ensure the wiki is not in read-only mode prior to execution.
 	 * @return bool
 	 */
 	public function isWriteMode() {
@@ -1589,11 +1584,6 @@ abstract class ApiBase extends ContextSource {
 
 		if ( $this->isReadMode() ) {
 			$ret[] = array( 'readrequired' );
-		}
-
-		if ( $this->isWriteMode() ) {
-			$ret[] = array( 'writerequired' );
-			$ret[] = array( 'writedisabled' );
 		}
 
 		if ( $this->needsToken() ) {
