@@ -2066,7 +2066,6 @@ Your email address is not revealed when other users contact you.',
 'right-bot'                   => 'Be treated as an automated process',
 'right-nominornewtalk'        => 'Not have minor edits to discussion pages trigger the new messages prompt',
 'right-apihighlimits'         => 'Use higher limits in API queries',
-'right-writeapi'              => 'Use of the write API',
 'right-delete'                => 'Delete pages',
 'right-bigdelete'             => 'Delete pages with large histories',
 'right-deletelogentry'        => 'Delete and undelete specific log entries',
@@ -2129,7 +2128,6 @@ Your email address is not revealed when other users contact you.',
 'action-reupload'             => 'overwrite this existing file',
 'action-reupload-shared'      => 'override this file on a shared repository',
 'action-upload_by_url'        => 'upload this file from a URL',
-'action-writeapi'             => 'use the write API',
 'action-delete'               => 'delete this page',
 'action-deleterevision'       => 'delete this revision',
 'action-deletedhistory'       => "view this page's deleted history",
