@@ -1194,7 +1194,6 @@ $wgMessageStructure = array(
 		'right-bot',
 		'right-nominornewtalk',
 		'right-apihighlimits',
-		'right-writeapi',
 		'right-delete',
 		'right-bigdelete',
 		'right-deletelogentry',
@@ -1257,7 +1256,6 @@ $wgMessageStructure = array(
 		'action-reupload',
 		'action-reupload-shared',
 		'action-upload_by_url',
-		'action-writeapi',
 		'action-delete',
 		'action-deleterevision',
 		'action-deletedhistory',
